results/SVCOMP/4-shot/log-ExSymExeResearch-2024_03_18_22_04_21.txt
class Main {
    //@ requires arg >= Integer.MIN_VALUE && arg <= Integer.MAX_VALUE;
    //@ ensures \result ==> (\exists int x, y; x == (arg > 0 ? arg : -arg) && y == 5 && test(x, y) != x + y);
    //@ ensures !\result ==> (\forall int x, y; x == (arg > 0 ? arg : -arg) && y == 5; test(x, y) == x + y);
    public static boolean f(int arg) {
        int x = arg > 0 ? arg : -arg;
        int y = 5;
        Main inst = new Main();
        return inst.test(x, y) != x + y;
    }

    //@ requires a >= 0 && a < 100 && b >= 0 && b < 100;
    //@ ensures \result >= Math.min(a, b) && \result <= Math.max(a, b);
    public int test(int a, int b) { // invokevirtual
        int result = 0;
        if (a >= 0 && a < 100 && b >= 0 && b < 100) {
            int sum = a + b;
            int diff = a - b;
            int temp;

            if (sum > 0) temp = a;
            else temp = b;
            if (temp < diff) result = temp;
            else result = diff;
        }
        return result;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeResearch.java:3: error: non-static method test(int,int) cannot be referenced from a static context
    //@ ensures \result ==> (\exists int x, y; x == (arg > 0 ? arg : -arg) && y == 5 && test(x, y) != x + y);
                                                                                        ^
/home/max/Documents/JMLGPT/tmp/ExSymExeResearch.java:4: error: non-static method test(int,int) cannot be referenced from a static context
    //@ ensures !\result ==> (\forall int x, y; x == (arg > 0 ? arg : -arg) && y == 5; test(x, y) == x + y);
                                                                                       ^
2 errors

